add ReservationEnd and NextReservation on RoomsView